; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/class/extr_usblp.c_usblp_suspend.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/class/extr_usblp.c_usblp_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_interface = type { i32 }
%struct.usblp = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_interface*, i32)* @usblp_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @usblp_suspend(%struct.usb_interface* %0, i32 %1) #0 {
  %3 = alloca %struct.usb_interface*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.usblp*, align 8
  store %struct.usb_interface* %0, %struct.usb_interface** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.usb_interface*, %struct.usb_interface** %3, align 8
  %7 = call %struct.usblp* @usb_get_intfdata(%struct.usb_interface* %6)
  store %struct.usblp* %7, %struct.usblp** %5, align 8
  %8 = load %struct.usblp*, %struct.usblp** %5, align 8
  %9 = getelementptr inbounds %struct.usblp, %struct.usblp* %8, i32 0, i32 0
  store i32 1, i32* %9, align 4
  %10 = load %struct.usblp*, %struct.usblp** %5, align 8
  %11 = call i32 @usblp_unlink_urbs(%struct.usblp* %10)
  ret i32 0
}

declare dso_local %struct.usblp* @usb_get_intfdata(%struct.usb_interface*) #1

declare dso_local i32 @usblp_unlink_urbs(%struct.usblp*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
